# meet-transcript-whisper

./: .dockerignore  .env.example  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py
src/api/: main.py  routes.py
src/core/: __init__.py  config.py  models.py
src/frontend/: app.js  index.html  styles.css
src/services/: __init__.py  diarization.py  pipeline.py  transcription.py
src/utils/: __init__.py  audio.py  formatters.py  logging.py
src/worker/: __init__.py  celery_app.py  tasks.py
tests/: __init__.py  conftest.py  test_api.py  test_formatters.py  test_pipeline.py
